--- a/apps/enlight/src/app/components/cart/cart.component.scss
+++ b/apps/enlight/src/app/components/cart/cart.component.scss
@@ -57,3 +57,13 @@ h5 {
 .addtocard-btn {
   margin: 20px;
 }
+.inline-block {
+  display: inline-block;
+  vertical-align: middle;
+}
+.rm-cart-icon {
+  cursor: pointer;
+}
+.float-right {
+  float: right;
+}
