--- a/apps/enlight/src/app/components/billing/billing.component.html
+++ b/apps/enlight/src/app/components/billing/billing.component.html
@@ -3,7 +3,7 @@
     <img
       mat-card-image
       src="../../../assets/images/receipt.jpg"
-      alt="Photo of a Shiba Inu"
+      alt="Photo of a billing"
     />
     <div>
       <section>
