Addressed code review comments

--- a/apps/enlight/src/app/components/billing/billing.component.html
+++ b/apps/enlight/src/app/components/billing/billing.component.html
@@ -1,10 +1,6 @@
 <mat-card class="home-card">
   <mat-card-content class="home-card-content">
-    <img
-      mat-card-image
-      src="../../../assets/images/receipt.jpg"
-      alt="Photo of a billing"
-    />
+    <img mat-card-image [src]="billingImagePath" alt="Photo of a billing" />
     <div>
       <section>
         <form
