--- a/apps/enlight/src/app/components/cart/cart.component.scss
+++ b/apps/enlight/src/app/components/cart/cart.component.scss
@@ -57,7 +57,7 @@ h5 {
 .addtocard-btn {
   margin: 20px;
 }
-.inline-block {
+.book-block-center {
   display: inline-block;
   vertical-align: middle;
 }
