--- a/apps/enlight/src/app/components/collection/collection.component.html
+++ b/apps/enlight/src/app/components/collection/collection.component.html
@@ -26,20 +26,20 @@
         <div class="book-action-btns book-btn">
           <h5>Billing Address</h5>
           <div>
-            <span style="font-weight: bold">Name:</span>&nbsp;
+            <span class="book-content-bold">Name:</span>&nbsp;
             <span>{{ item.billingInfo.name }}</span>
           </div>
           <div>
-            <span style="font-weight: bold">Email:</span>&nbsp;
+            <span class="book-content-bold">Email:</span>&nbsp;
             <span>{{ item.billingInfo.email }}</span>
           </div>
           <div>
-            <span style="font-weight: bold">Phone:</span>&nbsp;<span>{{
+            <span class="book-content-bold">Phone:</span>&nbsp;<span>{{
               item.billingInfo.phone
             }}</span>
           </div>
           <div>
-            <span style="font-weight: bold">Address:</span>&nbsp;
+            <span class="book-content-bold">Address:</span>&nbsp;
             <span>{{ item.billingInfo.address }}</span>
           </div>
         </div>
