--- a/apps/enlight/src/app/components/home/home.component.html
+++ b/apps/enlight/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="search-wrapper">
     <poc-ui-search-bar
       [placeholder]="'Search in Library'"
-      (searchValue)="onSearchInput($event)"
+      (searchValue)="onSearch($event)"
     ></poc-ui-search-bar>
   </div>
   <poc-card-tile
