--- a/apps/enlight/src/app/components/side-nav/side-nav.component.html
+++ b/apps/enlight/src/app/components/side-nav/side-nav.component.html
@@ -3,7 +3,7 @@
     <button mat-icon-button (click)="sideNav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
-    <h1 class="app-name">EnLight</h1>
+    <h1 class="app-name">{{ appName }}</h1>
   </mat-toolbar-row>
 </mat-toolbar>
 <mat-sidenav-container class="sidenav-container">
