Style changes for remove cart icon

--- a/apps/enlight/src/app/components/cart/cart.component.html
+++ b/apps/enlight/src/app/components/cart/cart.component.html
@@ -20,7 +20,7 @@
       </mat-card-content>
       <mat-card-footer>
         <h5>Written By:</h5>
-        <div class="inline-block">
+        <div class="book-block-center">
           <span>
             {{ book.volumeInfo.authors | addCommas }}
           </span>
